--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
 
         async function checkOpen() {
 
-            xhr.open("GET", root + "/coins/list/");
-            //xhr.setRequestHeader();
+            xhr.open("GET", root + "/coins/list");
 
         };
 
