--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <script>
 
-        var root = "www.api.coingecko.com/api/v3";
+        var root = "https://www.api.coingecko.com/api/v3";
         var xhr = new XMLHttpRequest();
 
         async function check() {
