--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
 
     <script>
 
-        var root = "https://www.api.coingecko.com/api/v3";
+        var root = "https://pro-api.coinmarketcap.com/v1";
         var xhr = new XMLHttpRequest();
+        //var key = "0e792116-c459-4521-859f-2bdb1ce63e43"
 
         async function check() {
             
@@ -123,7 +124,8 @@
 
         async function checkOpen() {
 
-            xhr.open("GET", root + "/coins/list");
+            xhr.open("GET", root + "/cryptocurrency/info");
+            //xhr.setRequestHeader("Access-Control-Allow-Origin: file:///C:/Users/Pika_Ball_Dude/Downloads/e/index.html", "X-CMC_PRO_API_KEY", key);
 
         };
 
