--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         async function checkOpen() {
 
             xhr.open("GET", root + "/cryptocurrency/info");
-            xhr.setRequestHeader("Access-Control-Allow-Origin: *", "X-CMC_PRO_API_KEY", key);
+            xhr.setRequestHeader("Access-Control-Allow-Origin: https://covid19dashboard.github.io/", "X-CMC_PRO_API_KEY", key);
 
         };
 
